cloud/nextcloud/httproute-private/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud-private
spec:
  hostnames:
  - nextcloud-private.suffix-automatic-replace
  parentRefs:
  - kind: Gateway
    namespace: gateways
    name: main-private
    sectionName: https-main
  rules:
  - backendRefs:
    - kind: Service
      name: frontend
      port: 80
